editor: fix textareas scrollbar cursor

--- a/src/browser/scss/_editor.scss
+++ b/src/browser/scss/_editor.scss
@@ -71,7 +71,7 @@
             border-top:1rem solid var(--color-fg);
             border-radius: 0;
             -webkit-appearance:none;
-            cursor: text;
+            cursor: initial;
         }
         &.column {
             ul {
